new results uploaded

--- a/python_implementation.ipynb
+++ b/python_implementation.ipynb
@@ -54,6 +54,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serviceability_distances = {\n",
+    "    \"engine\": 800.24,\n",
+    "    \"ladder\": 800.24,\n",
+    "    \"rescue\": 2675.74,\n",
+    "    \"squad\": 2339.26,\n",
+    "    \"hazardous\": 4537.84,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8fef3754",
    "metadata": {},
    "outputs": [],
@@ -398,7 +413,7 @@
    "id": "042a1185",
    "metadata": {},
    "source": [
-    "### 4. Scarce resources concentration\n",
+    "### 4. Scarce resources coverage\n",
     "\n",
     "\\begin{equation}\n",
     "    \\sum_{j \\in J}^{}s_{i, j, n}X_{i, j, k} =  1, \\forall n \\in N, k \\in K, i \\in \\left \\{ 3, 4 \\right \\}\n",
@@ -413,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scarce_resources_concentration_constraints = []\n",
+    "scarce_resources_availability = []\n",
     "\n",
     "for k in K:\n",
     "    for n in N:\n",
@@ -425,9 +440,9 @@
     "                v = X[(i, j, k)]\n",
     "                c.SetCoefficient(v, s)\n",
     "\n",
-    "            scarce_resources_concentration_constraints.append(c)\n",
+    "            scarce_resources_availability.append(c)\n",
     "\n",
-    "assert len(scarce_resources_concentration_constraints) == 780, \"The number of constraints (\" + str(len(scarce_resources_concentration_constraints)) + \") is NOT correct\""
+    "assert len(scarce_resources_availability) == 780, \"The number of constraints (\" + str(len(scarce_resources_availability)) + \") is NOT correct\""
    ]
   },
   {
@@ -473,6 +488,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scarce_resources_concentration = []\n",
+    "\n",
+    "for k in K:\n",
+    "    for a in J:\n",
+    "        for b in J:\n",
+    "            route_distance = df_distances_stations.loc[a, b]\n",
+    "            for i in [\"rescue\", \"squad\"]:\n",
+    "                type_distance_limit = serviceability_distances[i] / 2\n",
+    "                \n",
+    "                c = solver.Constraint(-solver.infinity(), route_distance + type_distance_limit)\n",
+    "            \n",
+    "                T_a = T[(i, a, k)]\n",
+    "                T_b = T[(i, b, k)]\n",
+    "\n",
+    "                c.SetCoefficient(T_a, type_distance_limit)\n",
+    "                c.SetCoefficient(T_b, type_distance_limit)\n",
+    "\n",
+    "                scarce_resources_concentration.append(c)\n",
+    "\n",
+    "assert len(scarce_resources_concentration) == 191844, \"The number of constraints (\" + str(len(scarce_resources_concentration)) + \") is NOT correct\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2e0edf37",
    "metadata": {},
@@ -498,6 +541,25 @@
     "    for j in J:\n",
     "        for i in [\"engine\", \"ladder\"]:\n",
     "            c = solver.Constraint(-solver.infinity(), 2)\n",
+    "            v = X[(i, j, k)]\n",
+    "            c.SetCoefficient(v, 1)\n",
+    "            station_resources_concentration_constraints.append(c)\n",
+    "                    \n",
+    "assert len(station_resources_concentration_constraints) == 876, \"The number of constraints (\" + str(len(station_resources_concentration_constraints)) + \") is NOT correct\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station_resources_concentration_constraints = []\n",
+    "\n",
+    "for k in K:\n",
+    "    for j in J:\n",
+    "        for i in [\"rescue\", \"squad\"]:\n",
+    "            c = solver.Constraint(-solver.infinity(), 1)\n",
     "            v = X[(i, j, k)]\n",
     "            c.SetCoefficient(v, 1)\n",
     "            station_resources_concentration_constraints.append(c)\n",
@@ -702,22 +764,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba7ae20a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "serviceability_distances = {\n",
-    "    \"engine\": 800.24,\n",
-    "    \"ladder\": 800.24,\n",
-    "    \"rescue\": 2675.74,\n",
-    "    \"squad\": 2339.26,\n",
-    "    \"hazardous\": 4537.84,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a6e1e130",
    "metadata": {},
    "outputs": [],
@@ -796,35 +842,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "objective = solver.Objective()\n",
-    "objective.SetMaximization()\n",
+    "def set_objective_function(wp, we, wd):\n",
+    "    objective = solver.Objective()\n",
+    "    objective.SetMaximization()\n",
     "\n",
-    "for k in K:\n",
-    "    shift_str = 'first' if k == 1 else 'second'\n",
-    "    for i in I:\n",
-    "        for j in J:\n",
-    "            v = X[(i, j, k)]\n",
-    "            overall_importance = 0\n",
-    "            \n",
-    "            for n in N:\n",
-    "                #computing the coefficient\n",
-    "                area_importance = 0\n",
     "\n",
-    "                s = 1 if serviceability[i].loc[n][j] else 0\n",
+    "    for k in K:\n",
+    "        shift_str = 'first' if k == 1 else 'second'\n",
+    "        for i in I:\n",
+    "            for j in J:\n",
+    "                v = X[(i, j, k)]\n",
+    "                overall_importance = 0\n",
+    "                \n",
+    "                for n in N:\n",
+    "                    #computing the coefficient\n",
+    "                    area_importance = 0\n",
     "\n",
-    "                if s == 1:  \n",
-    "                    current_n = neighborhood[neighborhood['nta'] == n]\n",
-    "                    column_name = f\"{i}_needed_{shift_str}_shift\"\n",
+    "                    s = 1 if serviceability[i].loc[n][j] else 0\n",
     "\n",
-    "                    p = current_n['population_density'].values[0]\n",
-    "                    e = current_n[column_name].values[0]\n",
-    "                    d = df_distance_scaled.loc[n][j]\n",
-    "                    \n",
-    "                    importance = (0.1 * p) + (0.45 * e) - (0.45 * d)\n",
-    "                    area_importance += importance\n",
+    "                    if s == 1:  \n",
+    "                        current_n = neighborhood[neighborhood['nta'] == n]\n",
+    "                        column_name = f\"{i}_needed_{shift_str}_shift\"\n",
     "\n",
-    "                overall_importance += area_importance\n",
-    "            objective.SetCoefficient(v, overall_importance)"
+    "                        p = current_n['population_density'].values[0]\n",
+    "                        e = current_n[column_name].values[0]\n",
+    "                        d = df_distance_scaled.loc[n][j]\n",
+    "                        \n",
+    "                        importance = (wp * p) + (we * e) - (wd * d)\n",
+    "                        area_importance += importance\n",
+    "\n",
+    "                    overall_importance += area_importance\n",
+    "                objective.SetCoefficient(v, overall_importance)\n",
+    "    \n",
+    "    return objective"
    ]
   },
   {
@@ -834,62 +884,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deployments_first_shift = pd.DataFrame(0, index=I, columns=J)\n",
-    "deployments_second_shift = pd.DataFrame(0, index=I, columns=J)\n",
+    "def solve_problem(wp, we, wd):\n",
+    "    deployments_first_shift = pd.DataFrame(0, index=I, columns=J)\n",
+    "    deployments_second_shift = pd.DataFrame(0, index=I, columns=J)\n",
     "\n",
-    "result = solver.Solve()\n",
+    "    objective = set_objective_function(wp, we, wd)\n",
+    "    result = solver.Solve()\n",
     "\n",
-    "if result == solver.ABNORMAL :\n",
-    "    print(\"Execution finished by an error\")\n",
-    "    \n",
-    "elif result == solver.FEASIBLE :\n",
-    "    print(\"In the specified time limit the solver has found a feasible solution\")\n",
-    "    for k in K:\n",
-    "        for i in I:\n",
-    "            for j in J:\n",
-    "                v = X[(i,j, k)]\n",
-    "                if v.SolutionValue()>0:\n",
-    "                    print(v, v.solution_value())\n",
-    "    print(\"The value for the objective function is\", objective.Value())\n",
+    "    if result == solver.ABNORMAL :\n",
+    "        print(\"Execution finished by an error\")\n",
     "        \n",
-    "elif result == solver.INFEASIBLE :\n",
-    "     print(\"There is no feasible solution for the problem\")\n",
+    "    elif result == solver.FEASIBLE :\n",
+    "        print(\"In the specified time limit the solver has found a feasible solution\")\n",
+    "        for k in K:\n",
+    "            for i in I:\n",
+    "                for j in J:\n",
+    "                    v = X[(i,j, k)]\n",
+    "                    if v.SolutionValue()>0:\n",
+    "                        print(v, v.solution_value())\n",
+    "        print(\"The value for the objective function is\", objective.Value())\n",
+    "            \n",
+    "    elif result == solver.INFEASIBLE :\n",
+    "        print(\"There is no feasible solution for the problem\")\n",
+    "            \n",
+    "    elif result == solver.NOT_SOLVED :\n",
+    "        print(\"In the specified time limit the solver has not found any feasible solution\")\n",
+    "            \n",
+    "    elif result == solver.OPTIMAL :\n",
+    "        print(\"In the specified time limit the solver has found a feasible solution\")\n",
+    "        for k in K:\n",
+    "            for i in I:\n",
+    "                for j in J:\n",
+    "                    v = X[(i,j,k)]\n",
+    "                    if v.SolutionValue()>0:\n",
+    "                        if k == 1:\n",
+    "                            deployments_first_shift.loc[i, j] = v.solution_value()\n",
+    "                        else:\n",
+    "                            deployments_second_shift.loc[i, j] = v.solution_value()\n",
+    "                        print(v, v.solution_value())\n",
     "        \n",
-    "elif result == solver.NOT_SOLVED :\n",
-    "     print(\"In the specified time limit the solver has not found any feasible solution\")\n",
+    "        print(\"The optimal value for the objective function is\", objective.Value())\n",
     "        \n",
-    "elif result == solver.OPTIMAL :\n",
-    "    print(\"In the specified time limit the solver has found a feasible solution\")\n",
-    "    for k in K:\n",
-    "        for i in I:\n",
-    "            for j in J:\n",
-    "                v = X[(i,j,k)]\n",
-    "                if v.SolutionValue()>0:\n",
-    "                    if k == 1:\n",
-    "                        deployments_first_shift.loc[i, j] = v.solution_value()\n",
-    "                    else:\n",
-    "                        deployments_second_shift.loc[i, j] = v.solution_value()\n",
-    "                    print(v, v.solution_value())\n",
-    "    \n",
-    "    print(\"The optimal value for the objective function is\", objective.Value())\n",
-    "    \n",
-    "elif result == solver.UNBOUNDED :\n",
-    "    print(\"The solution is unbounded\")\n",
-    "    \n",
-    "else :\n",
-    "    print(\"Unknown error code\")\n",
+    "    elif result == solver.UNBOUNDED :\n",
+    "        print(\"The solution is unbounded\")\n",
+    "        \n",
+    "    else :\n",
+    "        print(\"Unknown error code\")\n",
     "\n",
-    "deployments_first_shift.to_csv(\"deployments_first_01p_045e_045d.csv\")\n",
-    "deployments_second_shift.to_csv(\"deployments_second_01p_045e_045d.csv\")"
+    "    return deployments_first_shift, deployments_second_shift"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5780df5a",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Experiments"
+    "wp = 0.10\n",
+    "we = 0.40\n",
+    "wd = 0.50\n",
+    "\n",
+    "deployments_first_shift, deployments_second_shift = solve_problem(wp, we, wd)\n",
+    "\n",
+    "deployments_first_shift.to_csv(\"dataset/results/deployments_first_\" + str(int(wp*100)) + \"p_\" + str(int(we*100)) + \"e_\" + str(int(wd*100)) + \"d.csv\")\n",
+    "deployments_second_shift.to_csv(\"dataset/results/deployments_second_\" + str(int(wp*100)) + \"p_\" + str(int(we*100)) + \"e_\" + str(int(wd*100)) + \"d.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
