model implementation updated

--- a/python_implementation.ipynb
+++ b/python_implementation.ipynb
@@ -30,7 +30,9 @@
     "\n",
     "from ortools.linear_solver import pywraplp\n",
     "from numpy import average, std\n",
-    "from statistics import *"
+    "from statistics import *\n",
+    "import folium\n",
+    "import numpy as np"
    ]
   },
   {
@@ -475,7 +477,7 @@
     "            for j in J:\n",
     "                s_max += 1 if serviceability[i].loc[n, j] == True else 0\n",
     "            \n",
-    "            c = solver.Constraint(1, s_max)\n",
+    "            c = solver.Constraint(s_max / 2, s_max)\n",
     "            \n",
     "            for j in J:\n",
     "                s = 1 if serviceability[i].loc[n, j] == True else 0\n",
@@ -776,7 +778,8 @@
     "        for i in [\"engine\", \"ladder\", \"rescue\", \"squad\"]:\n",
     "        \n",
     "            route_distance = df_distances_stations.loc[a, b]\n",
-    "            type_distance_limit = serviceability_distances[i]\n",
+    "\n",
+    "            type_distance_limit = serviceability_distances[i] if i in [\"engine\", \"ladder\"] else (serviceability_distances[i] / 2)\n",
     "\n",
     "            c = solver.Constraint(-solver.infinity(), 0)\n",
     "            \n",
@@ -838,6 +841,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "availabilities_list = np.array(list(availabilities.values())).reshape(-1, 1)\n",
+    "vehicle_availabilities_scaled = MM_scaler.fit_transform(availabilities_list)\n",
+    "vehicle_availabilities_scaled\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "availabilities_scaled = {'engine': 1.0, 'ladder': 0.7244898, 'hazardous': 0.0, 'squad': 0.03571429, 'rescue':0.02040816}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c49a94ef",
    "metadata": {},
    "outputs": [],
@@ -867,8 +890,9 @@
     "                        p = current_n['population_density'].values[0]\n",
     "                        e = current_n[column_name].values[0]\n",
     "                        d = df_distance_scaled.loc[n][j]\n",
+    "                        q = availabilities_scaled[i]\n",
     "                        \n",
-    "                        importance = (wp * p) + (we * e) - (wd * d)\n",
+    "                        importance = (wp * p) + (we * e) - (wd * d) - q\n",
     "                        area_importance += importance\n",
     "\n",
     "                    overall_importance += area_importance\n",
@@ -936,18 +960,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "wp = 0.10\n",
-    "we = 0.40\n",
+    "wp = 0.40\n",
+    "we = 0.10\n",
     "wd = 0.50\n",
     "\n",
     "deployments_first_shift, deployments_second_shift = solve_problem(wp, we, wd)\n",
     "\n",
     "deployments_first_shift.to_csv(\"dataset/results/deployments_first_\" + str(int(wp*100)) + \"p_\" + str(int(we*100)) + \"e_\" + str(int(wd*100)) + \"d.csv\")\n",
     "deployments_second_shift.to_csv(\"dataset/results/deployments_second_\" + str(int(wp*100)) + \"p_\" + str(int(we*100)) + \"e_\" + str(int(wd*100)) + \"d.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#results1 = pd.read_csv(\"dataset/results/deployments_first_01p_045e_045d.csv\", index_col=0)\n",
+    "results2 = pd.read_csv(\"dataset/results/deployments_first_40p_10e_50d.csv\", index_col=0)\n",
+    "results2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(\"https://gitlab.com/drvicsana/cop-proyecto-2023/-/raw/main/located_firehouses.json\")\n",
+    "json_response = json.loads(response.text)\n",
+    "\n",
+    "map = folium.Map(location=[40.70, -73.94], zoom_start=10, width=\"50%\", tiles=\"CartoDB positron\")\n",
+    "vehicle_colors = {\n",
+    "    'engine': 'blue',\n",
+    "    'ladder': 'red',\n",
+    "    'rescue': 'green',\n",
+    "    'squad': 'orange',\n",
+    "    'hazardous': 'purple'\n",
+    "}\n",
+    "\n",
+    "# Legend HTML content\n",
+    "legend_html = '''\n",
+    "<div style=\"position: fixed; bottom: 50px; right: 50px; z-index:1000; font-size:14px;\">\n",
+    "     <p><strong>Legend</strong></p>\n",
+    "     <p><i class=\"fa fa-square fa-1x\" style=\"color:blue;\"></i> Engine</p>\n",
+    "     <p><i class=\"fa fa-square fa-1x\" style=\"color:red;\"></i> Ladder</p>\n",
+    "     <p><i class=\"fa fa-square fa-1x\" style=\"color:green;\"></i> Rescue</p>\n",
+    "     <p><i class=\"fa fa-square fa-1x\" style=\"color:orange;\"></i> Squad</p>\n",
+    "     <p><i class=\"fa fa-square fa-1x\" style=\"color:purple;\"></i> Hazardous</p>\n",
+    "     <p><i class=\"fa fa-star fa-1x\" style=\"color:black;\"></i> +1 vehicle</p>\n",
+    "</div>\n",
+    "'''\n",
+    "\n",
+    "legend = folium.Element(legend_html)\n",
+    "map.get_root().html.add_child(legend)\n",
+    "\n",
+    "# Adding markers to the map for each station\n",
+    "for idx, polygon in enumerate(json_response[\"features\"]):\n",
+    "    facility_address = polygon[\"properties\"][\"FacilityAddress\"]\n",
+    "    coordinates = [polygon[\"geometry\"][\"coordinates\"][1], polygon[\"geometry\"][\"coordinates\"][0]]\n",
+    "    \n",
+    "    for vehicle_type in results2.index:\n",
+    "        # Check if the station has this type of vehicle\n",
+    "        if results2.loc[vehicle_type, facility_address] > 0 and results2.loc[vehicle_type, facility_address]<=1:\n",
+    "            # Create marker with corresponding color for the vehicle type\n",
+    "            color = vehicle_colors[vehicle_type]\n",
+    "            marker = folium.Marker(coordinates, tooltip=f\"<b>Location</b>: {facility_address}\", icon=folium.Icon(color=color))\n",
+    "            marker.add_to(map)\n",
+    "            \n",
+    "        elif results2.loc[vehicle_type, facility_address] > 1:\n",
+    "            color = vehicle_colors[vehicle_type]\n",
+    "            marker = folium.Marker(coordinates, tooltip=f\"<b>Location</b>: {facility_address}\", icon=folium.Icon(color=color, icon=\"star\"))\n",
+    "            marker.add_to(map)\n",
+    "\n",
+    "# Display the map\n",
+    "map"
    ]
   },
   {
