Python files commented and uploaded

--- a/neighborhoods_serviceability.ipynb
+++ b/neighborhoods_serviceability.ipynb
@@ -52,7 +52,9 @@
     "# get a dataframe with the distances between stations and neighborhoods (ntas)\n",
     "df_distance_stations_ntas = pd.read_csv(\"dataset/distance_stations_neighborhoods.csv\", index_col=\"Unnamed: 0\")\n",
     "# get a dataframe with the distances between stations\n",
-    "df_distance_stations = pd.DataFrame(distances_stations_db)"
+    "df_distance_stations = pd.DataFrame(distances_stations_db)\n",
+    "# get number of ntas\n",
+    "n_nta = len(df_distance_stations_ntas)"
    ]
   },
   {
@@ -63,8 +65,14 @@
    "source": [
     "# define a list with vehicle types\n",
     "vehicle_types = [\"engine\", \"ladder\", \"rescue\", \"squad\", \"hazardous\"]\n",
-    "# define vehicle type quantities\n",
-    "vehicle_quantities = [197, 143, 5, 8, 1]"
+    "# define a dictionary with vehicle type quantities\n",
+    "vehicle_quantities = {\n",
+    "    \"engine\": 197, \n",
+    "    \"ladder\": 143, \n",
+    "    \"rescue\": 5, \n",
+    "    \"squad\": 8, \n",
+    "    \"hazardous\": 1\n",
+    "}"
    ]
   },
   {
@@ -121,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set the serviceability for each vehicle type"
+    "## Set the serviceability distance for each vehicle type"
    ]
   },
   {
@@ -142,12 +150,12 @@
     }
    ],
    "source": [
-    "for vehicle_quantity, vehicle_type in zip(vehicle_quantities, vehicle_types):\n",
-    "    \n",
-    "    n_nta = len(df_distance_stations_ntas)\n",
+    "# get the serviceability distance for each type\n",
+    "for vehicle_type in vehicle_types:\n",
+    "    # get vehicle type quantity\n",
+    "    vehicle_quantity = vehicle_quantities[vehicle_type]\n",
     "    # Set the number of neighborhoods you want to cover\n",
     "    num_neighborhoods_to_cover = 2 if vehicle_quantity > n_nta else round((n_nta / vehicle_quantity) + 1)\n",
-    "\n",
     "    # Initialize an empty dictionary to store minimum thresholds for each station\n",
     "    min_thresholds = {}\n",
     "\n",
@@ -155,15 +163,12 @@
     "    for station in df_distance_stations_ntas.columns:\n",
     "        # Sort the neighborhoods by distance to the current station\n",
     "        sorted_neighborhoods = df_distance_stations_ntas.sort_values(by=station)\n",
-    "\n",
-    "        # Select the top N neighborhoods to cover, where N is num_neighborhoods_to_cover\n",
+    "        # Select the top nearest N neighborhoods to cover, where N is num_neighborhoods_to_cover\n",
     "        selected_neighborhoods = sorted_neighborhoods.index[:num_neighborhoods_to_cover]\n",
-    "\n",
-    "        # Calculate the minimum distance threshold for the selected neighborhoods\n",
-    "        min_threshold = sorted_neighborhoods.loc[selected_neighborhoods, station].max()\n",
-    "\n",
+    "        # Calculate the maximum distance threshold for the selected neighborhoods\n",
+    "        max_threshold = sorted_neighborhoods.loc[selected_neighborhoods, station].max()\n",
     "        # Store the result in the dictionary\n",
-    "        min_thresholds[station] = min_threshold\n",
+    "        min_thresholds[station] = max_threshold\n",
     "\n",
     "    # Find the maximum threshold among all stations\n",
     "    max_threshold = max(min_thresholds.values())\n",
@@ -175,6 +180,13 @@
     "    ntas_serviceability = set_serviceability(max_threshold, ntas_serviceability).copy()\n",
     "    # store the serviceability table\n",
     "    dfs_nta_serviceability[vehicle_type] = ntas_serviceability\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export data"
    ]
   },
   {
